##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_hsdn
version = 0.0.1
url = https://github.com/bio2bel/hsdn
download_url = https://github.com/bio2bel/hsdn/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/hsdn/issues
    Source Code = https://github.com/bio2bel/hsdn
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = Converts the human symptoms-disease network produced by Zhou and Himmelstein to BEL
long_description = file: README.rst
keywords =
    Biological Expression Language
    Bio2BEL

[options]
install_requires =
    bio2bel
    pybel
    sqlalchemy
    tqdm
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_hsdn = bio2bel_hsdn.cli:main

[options.packages.find]
where = src

#######################
# Wheel Configuration #
#######################
[bdist_wheel]
python-tag = py36

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_hsdn

[coverage:paths]
source =
    src/bio2bel_hsdn
    .tox/*/lib/python*/site-packages/bio2bel_hsdn

[coverage:report]
show_missing = True
